--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+
+    <link 
+      rel="icon" 
+      href="%PUBLIC_URL%/favicon.png" 
+    />
+
+    <meta 
+      name="viewport" 
+      content="width=device-width, initial-scale=1" 
+    />
+
+    <meta 
+      name="theme-color" 
+      content="#000000" 
+    />
+
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A React-based expense tracker created by Michael R. Wilson"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link 
+      rel="apple-touch-icon" 
+      href="%PUBLIC_URL%/favicon.png" 
+    />
+
+    <link 
+      rel="manifest" 
+      href="%PUBLIC_URL%/manifest.json" 
+    />
 
     <title>
       Expense Tracker by Michael R. Wilson
     </title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this application.</noscript>
+    <noscript>
+      You need to enable JavaScript to run this application.
+    </noscript>
+
     <div id="root"></div>
   </body>
 </html>
